		8 bits deep?).
20181121	Getting rid of a hack in the O2 rendering code for "stipple
		patterns", by looking at the "stipple mode" register.
20181122	Fixing an old very annoying bug where floating point number
		0x0 was interpreted as 2.22507e-308 rather than 0.0. Thanks to
		Maya Rashish (coypu@SDF.ORG) for reporting the bug.
20181203	Beginning on test/floatingpoint infrastructure. Fixing some
		more floating point bugs.

==============  RELEASE 0.6.1  ==============

20181217	Implementing the ARM uxtb instruction.
		Implementing a simple Android boot.img file loader, and two
		dummy Android ARM machines ("Sony Xperia Mini" and "Finow X5
		Air").
		Treating ARM dsb/dmb/isb instructions as NOPs for now.
20190101	Implementing the ARM v7 movt and movw instructions.
20190103	Implementing the ARM sxth, uxth, bfi, and ubfx instructions.
20190110	Adding disassembly (but not execution yet) of ARM uxtab, uxtah,
		ldrex, and strex instructions.
20190112	Making sure that when writing to mirrored RAM, any dyntrans
		translations made in either the mirror or mirrored ranges are
		invalidated.
20190122	Beginning on a hack to allow emulated SGI O2 machines have more
		than 256 MB of RAM. Works with OpenBSD/sgi so far.
20190206	Implementing the ARM ldrex/strex (load-linked / store-
		conditional) instructions, and mls (multiply-and-subtract).
20190218	Implementing the ARM rev, uxtab, and uxtah instructions.
20190224	Implementing the ARM sbfx instruction.
20190227	Adding a skeleton RISC-V CPU and RISC-V "virt" machine.
		Refactoring some parts of the new framework to deal better
		with variable length instructions during disassembly.
20190306	Applying a patch from Andreas Gustafsson (gson) to set the
		SA_RESTART flag in the timer sigaction call.
20190417	Applying most of NetBSD's patches for the gxemul package (all
		except two).
20190418	Adding 512 KB ROM at 0xfff80000 in the HP 700/RX machine.
20190422	Implementing the i960 "mov reg,reg" instruction.